Letter spacing can be negative. Small fixes.

--- a/src/css/both/_fixes-material_ui.styl
+++ b/src/css/both/_fixes-material_ui.styl
@@ -30,7 +30,7 @@
 
 	.thet-control-container
 		.thet-material_ui-range-root
-			min-width 95px
+			min-width 110px
 			flex 1
 
 	.thet-material_ui-range-thumb
