--- a/src/css/both/settings.styl
+++ b/src/css/both/settings.styl
@@ -12,8 +12,8 @@
 .thet-setting-font_size
 	.thet-control-range-value
 		margin-right 1em
-		min-width 30px
-		max-width 30px
+		min-width 35px
+		max-width 35px
 
 .thet-setting-font
 	flex-direction column
